--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "1.0.0",
   "description": "Backend started",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config /index.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "Snehal Gadge",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
+    "mongoose": "^8.2.3"
+  }
 }
